--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,30 @@
-pyspark==3.5.0
-kafka-python==2.0.2
+annotated-types==0.7.0
+anyio==4.9.0
+beautifulsoup4==4.13.4
 cassandra-driver==3.29.1
+certifi==2025.7.14
+click==8.2.1
+distro==1.9.0
+exceptiongroup==1.3.0
+geomet==0.2.1.post1
+greenlet==3.0.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jiter==0.10.0
+kafka-python==2.0.2
+openai==1.97.0
 playwright==1.44.0
-python-dotenv
-beautifulsoup4
-openai
+py4j==0.10.9.7
+pydantic==2.11.7
+pydantic_core==2.33.2
+pyee==11.1.0
+pyspark==3.5.0
+python-dotenv==1.1.1
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
